# clip-guided-diffusion

./: .gitignore  README.md  setup.cfg
clip_guided_diffusion/: __main__.py  info.py  load_diffusion_model.py  main.py  v_denoiser.py
config/: guided_diffusion_kat.json  guided_diffusion_openai_imagenet.json  hdit_557m.json
