[metadata]
name = clip-guided-diffusion
version = 0.0.1
author = Katherine Crowson
author_email = crowsonkb@gmail.com
url = https://github.com/crowsonkb/clip-guided-diffusion
description = CLIP Guided Diffusion
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    clip-anytorch
    guided-diffusion @ git+https://github.com/crowsonkb/guided-diffusion#egg=guided-diffusion
    k-diffusion
    requests
    rich
    torch
    torchvision
    tqdm

[options.entry_points]
console_scripts =
    clip_guided_diffusion = clip_guided_diffusion.__main__:main
