[metadata]
name = clip-guided-diffusion
version = 0.0.1
author = Katherine Crowson
author_email = crowsonkb@gmail.com
url = https://github.com/crowsonkb/clip-guided-diffusion
description = CLIP Guided Diffusion
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    clip-anytorch
    guided-diffusion @ git+https://github.com/crowsonkb/guided-diffusion#egg=guided-diffusion
    k-diffusion >= 0.1.1.post1
    natten >= 0.15.1
    Pillow >= 9.5.0
    requests
    rich
    safetensors
    torch
    torchvision
    tqdm

[options.entry_points]
console_scripts =
    clip_guided_diffusion = clip_guided_diffusion.main:main
    clip_guided_diffusion_info = clip_guided_diffusion.info:main

[options.package_data]
clip_guided_diffusion = *.icc
